# dethread-api.rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE
prisma/: schema.prisma
src/: accounts.rs  jwt.rs  main.rs  posts.rs  prisma.rs  replies.rs
